tests/expectations/compiler/interfaces/optional_in_prototype_fail.out
Error [ETYC0372165]: This function has an output of type `u32?`, which is or contains an optional type and is not allowed as an output of an entry point fn.
    --> compiler-test:10:26
     |
  10 |     fn find(key: u32) -> u32? {
     |                          ^^^^
     |
     = Outputs of entry point fns cannot be optional or contain optionals. Consider moving the optionality outside the function call.
Error [ETYC0372043]: Cannot call a local entry point fn from an entry point fn.
    --> compiler-test:16:16
     |
  16 |         return find(key).unwrap();
     |                ^^^^^^^^^
